[tool.poetry]
name = "heionline"
version = "0.0.1"
description = ""
authors = ["Shinji.Kohara <tsukuyo21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask-restx = "^1.3.0"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
